# LEGO-Food-Tester

./: README.md
Arduino/: lego_food_tester_for_arduino.ino
ev3/: lego_food_tester_for_ev3.py
lego_food_tester_pkg/: CMakeLists.txt  package.xml
lego_food_tester_pkg/launch/: bringup.launch  control.launch
lego_food_tester_pkg/msg/: motor.msg
lego_food_tester_pkg/script/: gui_node.py  mqtt_pub_client_node.py
